objects/pse__Transaction__c.object
<CustomObject>
    <customHelpPage>pse__TransactionsHelp</customHelpPage>
    <description>A granular representation of an entity, expressed in units of time or currency, within FinancialForce PSA. Transactions are associated with a project; those related to timecards or expenses will also reference the associated resource. When eligible (typically when “Include In Financials” is selected on its related business record) the transaction amount or hours roll up to the project or resource, or, depending on configuration, their associated region, practice, or group. Never delete transaction records from a production organization.</description>
    <fields>
        <fullName>pse__Amount__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Budget__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Budget</label>
        <referenceTo>pse__Budget__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Billable External Hours</fullName>
                </value>
                <value>
                    <fullName>Billable Internal Hours</fullName>
                </value>
                <value>
                    <fullName>Billed Revenue</fullName>
                </value>
                <value>
                    <fullName>Booked Revenue</fullName>
                </value>
                <value>
                    <fullName>Budgeted Cost</fullName>
                </value>
                <value>
                    <fullName>Budgeted Expense Cost</fullName>
                </value>
                <value>
                    <fullName>Credited Non-Billable Internal Hours</fullName>
                </value>
                <value>
                    <fullName>Excluded Hours</fullName>
                </value>
                <value>
                    <fullName>Expense Budget</fullName>
                </value>
                <value>
                    <fullName>Expense Cost</fullName>
                </value>
                <value>
                    <fullName>External Cost</fullName>
                </value>
                <value>
                    <fullName>Internal Budget</fullName>
                </value>
                <value>
                    <fullName>Internal Cost</fullName>
                </value>
                <value>
                    <fullName>Invoiced Revenue</fullName>
                </value>
                <value>
                    <fullName>Non-Billable External Hours</fullName>
                </value>
                <value>
                    <fullName>Non-Billable Internal Hours</fullName>
                </value>
                <value>
                    <fullName>Other Cost</fullName>
                </value>
                <value>
                    <fullName>Pass-Through Ready-to-Bill Revenue</fullName>
                </value>
                <value>
                    <fullName>Pre-Billed Revenue</fullName>
                </value>
                <value>
                    <fullName>Ready-to-Bill Revenue</fullName>
                </value>
                <value>
                    <fullName>Revenue</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pse__Effective_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Expense__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Expense</label>
        <referenceTo>pse__Expense__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Group_Currency_Code__c</fullName>
        <label>Group Currency Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Group_Currency_Exchange_Rate__c</fullName>
        <label>Group Currency Exchange Rate</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Group</label>
        <referenceTo>pse__Grp__c</referenceTo>
        <relationshipLabel>Transaction Log</relationshipLabel>
        <relationshipName>Transaction_Log</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Hours__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Hours</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Milestone__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Milestone</label>
        <referenceTo>pse__Milestone__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Miscellaneous_Adjustment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Miscellaneous Adjustment</label>
        <referenceTo>pse__Miscellaneous_Adjustment__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Overridden_Group__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, this checkbox indicates that the Group for the Transaction has been set independently from usual &apos;follows rules&apos; for roll-ups.  Instead, it has been overridden at the business record (Budget, Milestone, Misc Adjustment) level.</description>
        <inlineHelpText>If checked, this checkbox indicates that the Group for the Transaction has been set independently from usual &apos;follows rules&apos; for roll-ups.  Instead, it has been overridden at the business record (Budget, Milestone, Misc Adjustment) level.</inlineHelpText>
        <label>Overridden Group</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Overridden_Practice__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, this checkbox indicates that the Practice for the Transaction has been set independently from usual &apos;follows rules&apos; for roll-ups.  Instead, it has been overridden at the business record (Budget, Milestone, Misc Adjustment) level.</description>
        <inlineHelpText>If checked, this checkbox indicates that the Practice for the Transaction has been set independently from usual &apos;follows rules&apos; for roll-ups.  Instead, it has been overridden at the business record (Budget, Milestone, Misc Adjustment) level.</inlineHelpText>
        <label>Overridden Practice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Overridden_Region__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, this checkbox indicates that the Region for the Transaction has been set independently from usual &apos;follows rules&apos; for roll-ups.  Instead, it has been overridden at the business record (Budget, Milestone, Misc Adjustment) level.</description>
        <inlineHelpText>If checked, this checkbox indicates that the Region for the Transaction has been set independently from usual &apos;follows rules&apos; for roll-ups.  Instead, it has been overridden at the business record (Budget, Milestone, Misc Adjustment) level.</inlineHelpText>
        <label>Overridden Region</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Practice_Currency_Code__c</fullName>
        <label>Practice Currency Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Practice_Currency_Exchange_Rate__c</fullName>
        <label>Practice Currency Exchange Rate</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Practice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Practice</label>
        <referenceTo>pse__Practice__c</referenceTo>
        <relationshipLabel>Transaction Log</relationshipLabel>
        <relationshipName>Transaction_Log</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Project_Currency_Code__c</fullName>
        <label>Project Currency Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Project_Currency_Exchange_Rate__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Project Currency Exchange Rate</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>pse__Proj__c</referenceTo>
        <relationshipLabel>Transaction Log</relationshipLabel>
        <relationshipName>Transaction_Log</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Region_Currency_Code__c</fullName>
        <label>Region Currency Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Region_Currency_Exchange_Rate__c</fullName>
        <label>Region Currency Exchange Rate</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Region</label>
        <referenceTo>pse__Region__c</referenceTo>
        <relationshipLabel>Transaction Log</relationshipLabel>
        <relationshipName>Transaction_Log</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Related_Record_Deleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Related Record Ineligible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Related_Record_ID__c</fullName>
        <label>Related Record ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Related_Record_Name__c</fullName>
        <label>Related Record Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Related_Record__c</fullName>
        <formula>IF(ISNULL(pse__Related_Record_ID__c),&apos;&apos;,HYPERLINK(&apos;/&apos;&amp;pse__Related_Record_ID__c, IF(ISNULL(pse__Related_Record_Name__c),pse__Related_Record_ID__c,pse__Related_Record_Name__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Related Record</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Resource_Currency_Code__c</fullName>
        <label>Resource Currency Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Resource_Currency_Exchange_Rate__c</fullName>
        <label>Resource Currency Exchange Rate</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Resource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Resource</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Transaction Log</relationshipLabel>
        <relationshipName>Transaction_Log</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Timecard__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Timecard</label>
        <referenceTo>pse__Timecard__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Budget</fullName>
                </value>
                <value>
                    <fullName>Expense</fullName>
                </value>
                <value>
                    <fullName>Invoice (Inbound)</fullName>
                </value>
                <value>
                    <fullName>Invoice (Outbound)</fullName>
                </value>
                <value>
                    <fullName>Milestone</fullName>
                </value>
                <value>
                    <fullName>Miscellaneous Adjustment</fullName>
                </value>
                <value>
                    <fullName>Purchase Order</fullName>
                </value>
                <value>
                    <fullName>Sales Order</fullName>
                </value>
                <value>
                    <fullName>Timecard</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pse__isBilled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>For Billing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__isCost__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Cost</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__isExpense__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Expense</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__isInvoiced__c</fullName>
        <defaultValue>false</defaultValue>
        <label>For Invoicing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__isRevenue__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Revenue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__isTime__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Time</label>
        <type>Checkbox</type>
    </fields>
    <label>Transaction</label>
    <listViews>
        <fullName>pse__All</fullName>
        <columns>NAME</columns>
        <columns>pse__Effective_Date__c</columns>
        <columns>pse__Type__c</columns>
        <columns>pse__Related_Record__c</columns>
        <columns>pse__Category__c</columns>
        <columns>pse__Amount__c</columns>
        <columns>pse__Project__c</columns>
        <columns>pse__Resource__c</columns>
        <columns>pse__Region__c</columns>
        <columns>pse__Practice__c</columns>
        <columns>pse__Group__c</columns>
        <columns>pse__Related_Record_Deleted__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>TX-{0}</displayFormat>
        <label>Transaction Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>pse__Transactions_must_have_an_Effective_Date</fullName>
        <active>true</active>
        <description>Transactions must have an Effective Date.</description>
        <errorConditionFormula>AND(ISBLANK(pse__Effective_Date__c),(OR(ISNEW(),ISCHANGED(pse__Effective_Date__c))))</errorConditionFormula>
        <errorDisplayField>pse__Effective_Date__c</errorDisplayField>
        <errorMessage>Transactions must have an Effective Date.</errorMessage>
    </validationRules>
</CustomObject>